--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "client": "cd frontend && npm start",
     "install-all": "npm install && cd backend && npm install && cd ../frontend && npm install"
   },
-  "keywords": ["countdown", "timer", "mern"],
+  "keywords": [
+    "countdown",
+    "timer",
+    "mern"
+  ],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "concurrently": "^8.2.2"
   }
-} 
+}
